# lamina

./: CMakeLists.txt  CMakeSettings.json  LISCENCE  lamina.cpp  lamina.h
lamina_source/: CMakeLists.txt  lamina.cpp  lamina.hpp
lamina_source/common/: CMakeLists.txt  RefArray.h  common.cpp  common.h  exception.cpp  exception.h
lamina_source/tensor/: CMakeLists.txt  Tensor.cpp  Tensor.h  TensorImpl.cpp  TensorImpl.h
lamina_source/tensor/dynamic_storage/: CMakeLists.txt  CPUDefaultDevice.cpp  CPUDefaultDevice.h  Device.cpp  Device.h  DynamicStorage.cpp  DynamicStorage.h  TypeInfo.cpp  TypeInfo.h
tests/: CMakeLists.txt  Tensor_test.cpp
