# CMakeList.txt : CMake project for lamina, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("lamina")

# Add source to this project's executable.
add_executable (lamina "lamina.cpp" "lamina.h")

# TODO: Add tests and install targets if needed.
